[gd_scene load_steps=45 format=3 uid="uid://4gg0i7eymyfj"]

[ext_resource type="Texture2D" uid="uid://d3wcbwld71co3" path="res://assets/ball6way.png" id="1_jc4f4"]
[ext_resource type="Script" path="res://ball_token.gd" id="2_j2rxr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_psox1"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thk3x"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnsc2"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m71yr"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyoie"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc7ov"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_boobc"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6snp3"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iydxv"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk6xw"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7fm0"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b402"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7vea"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgneo"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5a73"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g87r0"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7b8p"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwvg7"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgwaw"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p3pf"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo88k"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb4gh"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugyc2"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jv6t"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cykxp"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myqhs"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se74d"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lgj4"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt30o"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngdni"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouv4j"]
atlas = ExtResource("1_jc4f4")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwlwa"]
atlas = ExtResource("1_jc4f4")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o2vc"]
atlas = ExtResource("1_jc4f4")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuj77"]
atlas = ExtResource("1_jc4f4")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmuf2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_psox1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thk3x")
}],
"loop": false,
"name": &"e-w-stop",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnsc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m71yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyoie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc7ov")
}],
"loop": true,
"name": &"east",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_boobc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6snp3")
}],
"loop": false,
"name": &"ne-sw-stop",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iydxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk6xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7fm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b402")
}],
"loop": true,
"name": &"northeast",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7vea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgneo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5a73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g87r0")
}],
"loop": true,
"name": &"northwest",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7b8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwvg7")
}],
"loop": false,
"name": &"nw-se-stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgwaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p3pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo88k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb4gh")
}],
"loop": true,
"name": &"southeast",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugyc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jv6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cykxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myqhs")
}],
"loop": true,
"name": &"southwest",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_se74d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lgj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt30o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngdni")
}],
"loop": false,
"name": &"stationary",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouv4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwlwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o2vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuj77")
}],
"loop": true,
"name": &"west",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_umqfd"]
resource_name = "kick_east"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"east", &"e-w-stop"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play"
}, {
"args": [],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, 0), Vector2(30, 0), Vector2(28, 0)]
}

[sub_resource type="Animation" id="Animation_xh0it"]
resource_name = "kick_ne"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"northeast", &"ne-sw-stop"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play"
}, {
"args": [],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3.5, -3), Vector2(17.5, -15), Vector2(14, -12)]
}

[sub_resource type="Animation" id="Animation_2pf75"]
resource_name = "kick_nw"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"northwest", &"nw-se-stop"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play"
}, {
"args": [],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3.5, -3), Vector2(-17.5, -15), Vector2(-14, -12)]
}

[sub_resource type="Animation" id="Animation_6302g"]
resource_name = "kick_se"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"southeast", &"nw-se-stop"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play"
}, {
"args": [],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3.5, 3), Vector2(17.5, 15), Vector2(14, 12)]
}

[sub_resource type="Animation" id="Animation_65lft"]
resource_name = "kick_sw"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"southwest", &"ne-sw-stop"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play"
}, {
"args": [],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3.5, 3), Vector2(-17.5, 15), Vector2(-14, 12)]
}

[sub_resource type="Animation" id="Animation_ds5np"]
resource_name = "kick_west"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"west", &"e-w-stop"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play"
}, {
"args": [],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(-28, 0), Vector2(-30, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtqr6"]
_data = {
"kick_east": SubResource("Animation_umqfd"),
"kick_ne": SubResource("Animation_xh0it"),
"kick_nw": SubResource("Animation_2pf75"),
"kick_se": SubResource("Animation_6302g"),
"kick_sw": SubResource("Animation_65lft"),
"kick_west": SubResource("Animation_ds5np")
}

[node name="BallToken" type="Node2D"]
script = ExtResource("2_j2rxr")

[node name="BallSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-30, 0)
sprite_frames = SubResource("SpriteFrames_nmuf2")
animation = &"e-w-stop"
offset = Vector2(0, -4)

[node name="KickAnims" type="AnimationPlayer" parent="."]
root_node = NodePath("../BallSprite")
libraries = {
"": SubResource("AnimationLibrary_vtqr6")
}

[connection signal="animation_finished" from="KickAnims" to="." method="_on_kick_anims_animation_finished"]
